fix page header spacing

--- a/api-theme-portfolio/src/css/home.css
+++ b/api-theme-portfolio/src/css/home.css
@@ -184,7 +184,7 @@
             justify-content: center;
             align-items: center;
             gap: 1em;
-            padding: 2em 1em;
+            padding: 1.7em 1em;
         }
 
         .social-links > a > svg {
